[build-system]
requires = ["setuptools >=64"]
build-backend = "setuptools.build_meta"

[project]
name = "binchicken"
dynamic = ["version", "dependencies"]
authors = [
  { name="Samuel Aroney", email="samuel.aroney@outlook.com" },
]
description = "Bin Chicken - targeted recovery of low abundance metagenome assembled genomes through intelligent coassembly"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/AroneyS/binchicken"
"Bug Tracker" = "https://github.com/AroneyS/binchicken/issues"

[project.scripts]
binchicken = "binchicken.binchicken:main"
ibis = "binchicken.binchicken:main"

[tool.setuptools]
packages = ["binchicken", "binchicken.config", "binchicken.workflow", "binchicken.workflow.env", "binchicken.workflow.scripts"]

[tool.setuptools.dynamic]
version = {attr = "binchicken.__version__"}
dependencies = {file = "admin/requirements.txt"}
