[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "binchicken"
dynamic = ["version"]
authors = [
  { name="Samuel Aroney", email="samuel.aroney@outlook.com" },
]
description = "Bin Chicken - targeted recovery of low abundance metagenome assembled genomes through intelligent coassembly"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = ["snakemake>=8.25.1",
  "snakemake-executor-plugin-cluster-generic>=1.0.9",
  "snakemake-executor-plugin-slurm>=0.11.2",
  "networkx>=3.1",
  "bird-tool-utils>=0.4.0",
  "extern",
  "ruamel.yaml>=0.15.99",
  "polars>=1.2.0",
  "pyarrow",
  "sourmash>=4.8.0",
  "sourmash-plugin-branchwater>=0.9.0"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/AroneyS/binchicken"
"Bug Tracker" = "https://github.com/AroneyS/binchicken/issues"

[project.scripts]
binchicken = "binchicken.binchicken:main"
ibis = "binchicken.binchicken:main"

[tool.setuptools]
packages = ["binchicken", "binchicken.config", "binchicken.workflow", "binchicken.workflow.env", "binchicken.workflow.scripts"]

[tool.setuptools.dynamic]
version = {attr = "binchicken.__version__"}
